src/main/antlr/org/provarules/parser/Prova2Parser.java
// $ANTLR 3.4 C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g 2013-01-02 16:17:20

       package org.provarules.parser;

	import org.provarules.parser2.ProvaAST;
	import org.provarules.parser2.ProvaErrorReporter;


import org.antlr.runtime.*;

    import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class Prova2Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANNOTATION", "ARGS", "ARITHMETIC_RELATION", "ATERM", "BAR", "BRA", "CHAR_ESC", "CLAUSE", "CLEAN_STRING", "CLOSE", "COMMA", "CUT", "DIGIT", "DIV", "DOLLAR", "DOLLARWORD", "DOT", "EQUAL", "EXPONENT", "EXPR", "FUNCTION", "FUNCTION_CALL", "GE", "GT", "GUARD", "IF", "INSTANCE_JAVA_CALL", "INT_LITERAL", "KET", "KEY_VALUE", "LC", "LCWORD", "LE", "LIST_BODY", "LITERAL", "LONG_LITERAL", "LT", "METADATA", "MINUS", "ML_COMMENT", "MULT", "NEWLINE", "NOT_EQUAL1", "NOT_EQUAL2", "OPEN", "PLUS", "PREDICATE", "PROVA_LIST", "PROVA_MAP", "QUALIFIED_JAVA_CLASS", "QUERY", "RELATION", "REM", "RULEBASE", "SEMANTIC_ATTACHMENT", "STATEMENT", "STATIC_JAVA_CALL", "STRING1", "STRING2", "TERM", "TYPED_VARIABLE", "UC", "UCWORD", "UNDERSCORE", "USWORD", "WORD", "WS", "'->'", "':'", "'@'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int ANNOTATION=4;
    public static final int ARGS=5;
    public static final int ARITHMETIC_RELATION=6;
    public static final int ATERM=7;
    public static final int BAR=8;
    public static final int BRA=9;
    public static final int CHAR_ESC=10;
    public static final int CLAUSE=11;
    public static final int CLEAN_STRING=12;
    public static final int CLOSE=13;
    public static final int COMMA=14;
    public static final int CUT=15;
    public static final int DIGIT=16;
    public static final int DIV=17;
    public static final int DOLLAR=18;
    public static final int DOLLARWORD=19;
    public static final int DOT=20;
    public static final int EQUAL=21;
    public static final int EXPONENT=22;
    public static final int EXPR=23;
    public static final int FUNCTION=24;
    public static final int FUNCTION_CALL=25;
    public static final int GE=26;
    public static final int GT=27;
    public static final int GUARD=28;
    public static final int IF=29;
    public static final int INSTANCE_JAVA_CALL=30;
    public static final int INT_LITERAL=31;
    public static final int KET=32;
    public static final int KEY_VALUE=33;
    public static final int LC=34;
    public static final int LCWORD=35;
    public static final int LE=36;
    public static final int LIST_BODY=37;
    public static final int LITERAL=38;
    public static final int LONG_LITERAL=39;
    public static final int LT=40;
    public static final int METADATA=41;
    public static final int MINUS=42;
    public static final int ML_COMMENT=43;
    public static final int MULT=44;
    public static final int NEWLINE=45;
    public static final int NOT_EQUAL1=46;
    public static final int NOT_EQUAL2=47;
    public static final int OPEN=48;
    public static final int PLUS=49;
    public static final int PREDICATE=50;
    public static final int PROVA_LIST=51;
    public static final int PROVA_MAP=52;
    public static final int QUALIFIED_JAVA_CLASS=53;
    public static final int QUERY=54;
    public static final int RELATION=55;
    public static final int REM=56;
    public static final int RULEBASE=57;
    public static final int SEMANTIC_ATTACHMENT=58;
    public static final int STATEMENT=59;
    public static final int STATIC_JAVA_CALL=60;
    public static final int STRING1=61;
    public static final int STRING2=62;
    public static final int TERM=63;
    public static final int TYPED_VARIABLE=64;
    public static final int UC=65;
    public static final int UCWORD=66;
    public static final int UNDERSCORE=67;
    public static final int USWORD=68;
    public static final int WORD=69;
    public static final int WS=70;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public Prova2Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public Prova2Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return Prova2Parser.tokenNames; }
    public String getGrammarFileName() { return "C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g"; }


        private ProvaErrorReporter errorReporter = null;

        public void setErrorReporter(ProvaErrorReporter errorReporter) {
            this.errorReporter = errorReporter;
        }

        public void emitErrorMessage(String msg) {
            errorReporter.reportError(msg);
        }



    public static class rulebase_return extends ParserRuleReturnScope {
        ProvaAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "rulebase"
    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:88:1: rulebase : ( statement )* ( NEWLINE )* EOF -> ^( RULEBASE ( statement )* ) ;
    public final Prova2Parser.rulebase_return rulebase() throws RecognitionException {
        Prova2Parser.rulebase_return retval = new Prova2Parser.rulebase_return();
        retval.start = input.LT(1);


        ProvaAST root_0 = null;

        Token NEWLINE2=null;
        Token EOF3=null;
        Prova2Parser.statement_return statement1 =null;


        ProvaAST NEWLINE2_tree=null;
        ProvaAST EOF3_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:2: ( ( statement )* ( NEWLINE )* EOF -> ^( RULEBASE ( statement )* ) )
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:4: ( statement )* ( NEWLINE )* EOF
            {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:4: ( statement )*
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_rulebase343);
            	    statement1=statement();

            	    state._fsp--;

            	    stream_statement.add(statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:15: ( NEWLINE )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==NEWLINE) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:15: NEWLINE
            	    {
            	    NEWLINE2=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_rulebase346);  
            	    stream_NEWLINE.add(NEWLINE2);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            EOF3=(Token)match(input,EOF,FOLLOW_EOF_in_rulebase349);  
            stream_EOF.add(EOF3);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (ProvaAST)adaptor.nil();
            // 89:27: -> ^( RULEBASE ( statement )* )
            {
                // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:30: ^( RULEBASE ( statement )* )
                {
                ProvaAST root_1 = (ProvaAST)adaptor.nil();
                root_1 = (ProvaAST)adaptor.becomeRoot(
                (ProvaAST)adaptor.create(RULEBASE, "RULEBASE")
                , root_1);

                // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:89:41: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (ProvaAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ProvaAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "rulebase"


    public static class statement_return extends ParserRuleReturnScope {
        ProvaAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:91:1: statement : ( NEWLINE )* stat end_of_statement -> ^( STATEMENT stat ) ;
    public final Prova2Parser.statement_return statement() throws RecognitionException {
        Prova2Parser.statement_return retval = new Prova2Parser.statement_return();
        retval.start = input.LT(1);


        ProvaAST root_0 = null;

        Token NEWLINE4=null;
        Prova2Parser.stat_return stat5 =null;

        Prova2Parser.end_of_statement_return end_of_statement6 =null;


        ProvaAST NEWLINE4_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleSubtreeStream stream_end_of_statement=new RewriteRuleSubtreeStream(adaptor,"rule end_of_statement");
        RewriteRuleSubtreeStream stream_stat=new RewriteRuleSubtreeStream(adaptor,"rule stat");
        try {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:92:2: ( ( NEWLINE )* stat end_of_statement -> ^( STATEMENT stat ) )
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:92:4: ( NEWLINE )* stat end_of_statement
            {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:92:4: ( NEWLINE )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==NEWLINE) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:92:4: NEWLINE
            	    {
            	    NEWLINE4=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_statement367);  
            	    stream_NEWLINE.add(NEWLINE4);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            pushFollow(FOLLOW_stat_in_statement370);
            stat5=stat();

            state._fsp--;

            stream_stat.add(stat5.getTree());

            pushFollow(FOLLOW_end_of_statement_in_statement372);
            end_of_statement6=end_of_statement();

            state._fsp--;

            stream_end_of_statement.add(end_of_statement6.getTree());

            // AST REWRITE
            // elements: stat
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (ProvaAST)adaptor.nil();
            // 92:35: -> ^( STATEMENT stat )
            {
                // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:92:38: ^( STATEMENT stat )
                {
                ProvaAST root_1 = (ProvaAST)adaptor.nil();
                root_1 = (ProvaAST)adaptor.becomeRoot(
                (ProvaAST)adaptor.create(STATEMENT, "STATEMENT")
                , root_1);

                adaptor.addChild(root_1, stream_stat.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (ProvaAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ProvaAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class end_of_statement_return extends ParserRuleReturnScope {
        ProvaAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "end_of_statement"
    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:94:1: end_of_statement : ( NEWLINE )* DOT ( NEWLINE | EOF ) ;
    public final Prova2Parser.end_of_statement_return end_of_statement() throws RecognitionException {
        Prova2Parser.end_of_statement_return retval = new Prova2Parser.end_of_statement_return();
        retval.start = input.LT(1);


        ProvaAST root_0 = null;

        Token NEWLINE7=null;
        Token DOT8=null;
        Token set9=null;

        ProvaAST NEWLINE7_tree=null;
        ProvaAST DOT8_tree=null;
        ProvaAST set9_tree=null;

        try {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:95:2: ( ( NEWLINE )* DOT ( NEWLINE | EOF ) )
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:95:4: ( NEWLINE )* DOT ( NEWLINE | EOF )
            {
            root_0 = (ProvaAST)adaptor.nil();


            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:95:4: ( NEWLINE )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==NEWLINE) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:95:4: NEWLINE
            	    {
            	    NEWLINE7=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_end_of_statement389); 
            	    NEWLINE7_tree = 
            	    (ProvaAST)adaptor.create(NEWLINE7)
            	    ;
            	    adaptor.addChild(root_0, NEWLINE7_tree);


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            DOT8=(Token)match(input,DOT,FOLLOW_DOT_in_end_of_statement392); 
            DOT8_tree = 
            (ProvaAST)adaptor.create(DOT8)
            ;
            adaptor.addChild(root_0, DOT8_tree);


            set9=(Token)input.LT(1);

            if ( input.LA(1)==EOF||input.LA(1)==NEWLINE ) {
                input.consume();
                adaptor.addChild(root_0, 
                (ProvaAST)adaptor.create(set9)
                );
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (ProvaAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ProvaAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "end_of_statement"


    public static class stat_return extends ParserRuleReturnScope {
        ProvaAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "stat"
    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:97:1: stat : ( clause | query | function );
    public final Prova2Parser.stat_return stat() throws RecognitionException {
        Prova2Parser.stat_return retval = new Prova2Parser.stat_return();
        retval.start = input.LT(1);


        ProvaAST root_0 = null;

        Prova2Parser.clause_return clause10 =null;

        Prova2Parser.query_return query11 =null;

        Prova2Parser.function_return function12 =null;



        try {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:97:7: ( clause | query | function )
            int alt5=3;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:97:9: clause
                    {
                    root_0 = (ProvaAST)adaptor.nil();


                    pushFollow(FOLLOW_clause_in_stat411);
                    clause10=clause();

                    state._fsp--;

                    adaptor.addChild(root_0, clause10.getTree());

                    }
                    break;
                case 2 :
                    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:98:5: query
                    {
                    root_0 = (ProvaAST)adaptor.nil();


                    pushFollow(FOLLOW_query_in_stat417);
                    query11=query();

                    state._fsp--;

                    adaptor.addChild(root_0, query11.getTree());

                    }
                    break;
                case 3 :
                    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:99:5: function
                    {
                    root_0 = (ProvaAST)adaptor.nil();


                    pushFollow(FOLLOW_function_in_stat423);
                    function12=function();

                    state._fsp--;

                    adaptor.addChild(root_0, function12.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (ProvaAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (ProvaAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "stat"


    public static class function_return extends ParserRuleReturnScope {
        ProvaAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "function"
    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:101:1: function : ( metadata )? LCWORD list_body0 ':' list_body0 ( '=' literals )? -> ^( CLAUSE ( metadata )? LCWORD list_body0 list_body0 ( literals )? ) ;
    public final Prova2Parser.function_return function() throws RecognitionException {
        Prova2Parser.function_return retval = new Prova2Parser.function_return();
        retval.start = input.LT(1);


        ProvaAST root_0 = null;

        Token LCWORD14=null;
        Token char_literal16=null;
        Token char_literal18=null;
        Prova2Parser.metadata_return metadata13 =null;

        Prova2Parser.list_body0_return list_body015 =null;

        Prova2Parser.list_body0_return list_body017 =null;

        Prova2Parser.literals_return literals19 =null;


        ProvaAST LCWORD14_tree=null;
        ProvaAST char_literal16_tree=null;
        ProvaAST char_literal18_tree=null;
        RewriteRuleTokenStream stream_72=new RewriteRuleTokenStream(adaptor,"token 72");
        RewriteRuleTokenStream stream_LCWORD=new RewriteRuleTokenStream(adaptor,"token LCWORD");
        RewriteRuleTokenStream stream_EQUAL=new RewriteRuleTokenStream(adaptor,"token EQUAL");
        RewriteRuleSubtreeStream stream_list_body0=new RewriteRuleSubtreeStream(adaptor,"rule list_body0");
        RewriteRuleSubtreeStream stream_literals=new RewriteRuleSubtreeStream(adaptor,"rule literals");
        RewriteRuleSubtreeStream stream_metadata=new RewriteRuleSubtreeStream(adaptor,"rule metadata");
        try {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:2: ( ( metadata )? LCWORD list_body0 ':' list_body0 ( '=' literals )? -> ^( CLAUSE ( metadata )? LCWORD list_body0 list_body0 ( literals )? ) )
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:4: ( metadata )? LCWORD list_body0 ':' list_body0 ( '=' literals )?
            {
            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:4: ( metadata )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==73) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:4: metadata
                    {
                    pushFollow(FOLLOW_metadata_in_function433);
                    metadata13=metadata();

                    state._fsp--;

                    stream_metadata.add(metadata13.getTree());

                    }
                    break;

            }


            LCWORD14=(Token)match(input,LCWORD,FOLLOW_LCWORD_in_function436);  
            stream_LCWORD.add(LCWORD14);


            pushFollow(FOLLOW_list_body0_in_function438);
            list_body015=list_body0();

            state._fsp--;

            stream_list_body0.add(list_body015.getTree());

            char_literal16=(Token)match(input,72,FOLLOW_72_in_function440);  
            stream_72.add(char_literal16);


            pushFollow(FOLLOW_list_body0_in_function442);
            list_body017=list_body0();

            state._fsp--;

            stream_list_body0.add(list_body017.getTree());

            // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:47: ( '=' literals )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==EQUAL) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\home\\kozlenkova\\git\\prova\\src\\main\\antlr\\org\\provarules\\parser\\Prova2.g:102:48: '=' literals
                    {
                    char_literal18=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_function445);  
                    stream_EQUAL.add(char_literal18);


                    pushFollow(FOLLOW_literals_in_function447);
                    literals19=literals();

                    state._fsp--;

                    stream_literals.add(literals19.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: list_body0, LCWORD, metadata, literals, list_body0
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
